# Bootcamp-python_backend

./: README.md
05-Lidando_com_data_hora_e_fuso_horario_no_Python/: 01_trabalhando_com_objeto_date_time_e_datetime.py  03_formatando_e_convertendo_datas_com_strftime_e_strptime.py  05_trabalhando_com_timezone_com_timedelta.py  06_desafio_sistema_bancario_data.py
06-Manipulando_arquivos_em_Python/: 01_abrindo_e_fechando_arquivos.py  02_lendo_de_um_arquivo.py  03_escrevendo_em_um_arquivo.py  04_gerenciando_arquivos_e_diretorios.py  05_tratamento_de_excecoes_em_manipulacao_de_arquivos.py  06_boas_praticas_na_manipulacao_de_arquivos.py  07_trabalhando_com_arquivos_CSV.py  08_desafio_sistema_bancario_arquivo.py  arquivo-utf-8.txt  arquivo.txt  clientes.csv  contas.csv  log.txt
07-Gerenciamento_de_pacotes_convencoes_e_boas_praticas/: 01_boas_praticas.py  02_desafio_sistema_bancario_boas_praticas.py  pyproject.toml
07-Gerenciamento_de_pacotes_convencoes_e_boas_praticas/.env/: pyvenv.cfg
07-Gerenciamento_de_pacotes_convencoes_e_boas_praticas/.env/Scripts/: activate  activate.bat
08-Introdução_ao_banco_de_dados_relacional_SQL/: 01_crud.sql  05_funcoes_agregadas.sql  06_index.sql
09-Introducao_ao_banco_de_dados_nao_relacional/: 01_inserindo.json
10-Python_DB_API/: 01_meu_banco.py  02_injecao.py  03_transacao.py  meu_banco.sqlite
12-Algoritmos_e_aprendizado_de_maquina/: 01_speech_recognition.py
Convertendo_tipos/: convertendo_tipos.py
Funcoes_de_entrada_e_saida/: print_e_input.py
Primeiro_projeto/: primeiro_programa.py
(+71 files in other folders)
