[tool.poetry]
name = "07-gerenciamento-de-pacotes-convencoes-e-boas-praticas"
version = "0.1.0"
description = ""
authors = ["galessoester <galessoester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
